# P02

./: Cargo.toml
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: aes_utils.rs  lib.rs  protocol.rs  rsa_utils.rs
