[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.0"
rfd = "0.15.2"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
bincode = "1.3.3"
serde = "1.0.228"
shared = { path = "../shared" }
bytes = "1.11.1"
futures = "0.3.32"
rsa = "0.9.10"

