[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
bincode = "1.3"
byteorder = "1.5.0"
cipher = "0.4.4"
rand = "0.10.0"
rand_core = "0.6"
rsa = { version = "0.9.10", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
